--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,6 +28,7 @@
       width: 33%;
       border: 3px solid rgb(103, 245, 174);
       padding: 10px;
+      padding-top: 20px;
       background-color: rgb(219, 240, 230);
       
 
@@ -46,3 +47,37 @@
     overflow: hidden;
     padding: 10px 20px;
   }
+  
+  @keyframes slide {
+    from {
+      background-position: 0 0;
+    }
+  
+    to {
+      background-position: -120px 60px;
+    }
+  }
+  body {
+    color:black;
+    font-family: "Questrial", sans-serif;
+    background-color: rgb(103, 245, 174);
+    background-image: linear-gradient(
+        45deg,
+        rgb(219, 240, 230) 25%,
+        transparent 25%,
+        transparent 75%,
+        rgb(219, 240, 230) 75%,
+        rgb(219, 240, 230)
+      ),
+      linear-gradient(
+        -45deg,
+        rgb(219, 240, 230) 25%,
+        transparent 25%,
+        transparent 75%,
+        rgb(219, 240, 230) 75%,
+        rgb(219, 240, 230)
+      );
+    background-size: 60px 60px;
+    background-position: 0 0;
+    animation: slide 4s infinite linear;
+  }  
