--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(235, 255, 255, 0.932);
+  /* background-image: "E:\appstone\src\components\pictures\17973908.jpg"; */
 }
 
 code {
